--- a/assets/scss/blocks/core/image/_style.scss
+++ b/assets/scss/blocks/core/image/_style.scss
@@ -9,6 +9,10 @@ $enable-image-block-styles:             true !default;
             display: block;
         }
 
+        figcaption {
+            @include apply-font(body);
+        }
+
         // force images to fill their container
         // because Safari doesn't download new images from the srcset when the browser is resized
         &.alignwide,
